[package]
name = "ccl_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.14.0"
ordermap = "0.5.4"
ustr = { version = "1.1.0", optional = true }

[dev-dependencies]
rstest = "0.24.0"
pretty_assertions = "1.4.1"
rand = "0.8.5"
rand_chacha = "0.3.1"

[features]
default = ["dep:ustr"]
no-intern = []
