[package]
name = "ccl_rs"
version = "0.1.0"
edition = "2021"
description = "A parser for the Categorical Configuration Language"
repository = "https://github.com/rspencer01/ccl_rs"
license = "MIT"
keywords = ["ccl", "config"]
authors = ["Robert Spencer <me@robertandrewspencer.com>"]
categories = ["config", "parser-implementations"]
exclude = [".*"]

[dependencies]
itertools = "0.14.0"
ordermap = "0.5.4"
ustr = { version = "1.1.0", optional = true }

[dev-dependencies]
rstest = "0.24.0"
pretty_assertions = "1.4.1"
rand = "0.8.5"
rand_chacha = "0.3.1"

[features]
default = ["dep:ustr"]
no-intern = []

[lints.rust]
unsafe_code = "forbid"
